# Brainstem

./: .env.example  .gitignore  .release-notes.md  BRAIN_ARCHITECTURE.md  BRAIN_V0_TECH_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
benchmarks/: relation_heavy_dataset.json  retrieval_dataset.json  suite_manifest.json
demo/: README.md
migrations/: 0001_initial.sql  0002_postgres_pgvector.sql
ops/: BACKUP_RESTORE.md
planning/: README.md
reports/: relation_graph_benchmark.md  retrieval_benchmark.md
scripts/: backup_postgres.sh  backup_sqlite.sh  benchmark_recall.py  create_bootstrap_issues.sh  generate_benchmark_report.py  generate_leaderboard.py  init_postgres_db.sh  init_sqlite_db.py  job_worker.py  mcp_server.py  prepare_release.py  restore_postgres.sh  restore_sqlite.sh  run_performance_regression.py  smoke_docker_stack.sh  verify_sqlite_restore.py
tests/: test_api.py  test_auth.py  test_backend_selection.py  test_backup_restore.py  test_benchmark.py  test_cli.py  test_compaction.py  test_eval.py  test_graph.py  test_jobs.py  test_jobs_distributed.py  test_leaderboard.py  test_mcp_auth.py  test_mcp_integration_e2e.py  test_mcp_tools.py  test_model_api.py  test_model_registry.py  test_model_registry_persistence.py  test_observability.py  test_performance.py  test_postgres_integration.py  test_release.py  test_store_sqlite.py  test_vector.py
(+38 files in other folders)
