[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "brainstem"
version = "0.1.0"
description = "Brainstem shared memory coprocessor for AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0",
]
postgres = [
  "psycopg[binary]>=3.2.0,<4.0.0",
]
mcp = [
  "mcp>=1.0.0,<2.0.0",
]

[project.scripts]
brainstem = "brainstem.cli:main"
brainstem-api = "brainstem.main:run"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
warn_unused_configs = true
